<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="LoginPost">Login - Post</string>
    <string name="App">Login Application</string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method</string>
    <string name="Choose">Choose Method</string>
    <string name="email">E-mail</string>
    <string name="Register_bt">Register</string>
    <string name="Register">Register new account </string>
    <string name="title_activity_login">Sign in</string>
    <string name="server">Server message</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>