<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="pl.legalnyplener.shoppinglist.RegisterActivity" >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
    <EditText

        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textEmailAddress" >
    </EditText>
    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:layout_below="@+id/textView3"
        android:layout_toEndOf="@+id/textView1">

        <requestFocus android:layout_width="wrap_content" />

    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:layout_above="@+id/editText2"
        android:layout_alignStart="@+id/email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Role"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="10sp"
        android:layout_marginBottom="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"
        android:layout_above="@+id/textView7"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="25dp" />


    <!--
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView6"
            android:onClick="loginPost"
            android:text="@string/LoginPost" />
    -->
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Register"
        android:text="@string/Register_bt"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/email_input"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginStart="14dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignEnd="@+id/textView1" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_alignBaseline="@+id/email_input"
        android:layout_alignBottom="@+id/email_input"
        android:layout_toStartOf="@+id/textView3" />

</RelativeLayout>